<resources>
    <string name="app_name">Github User\'s</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="company">Company</string>
    <string name="detailUser">Detail User</string>
    <string name="miftah">Miftah Juanda Batubara</string>
    <string name="search">Search</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="search_hint">Cari User Github</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="type">User</string>
    <string name="like">Like</string>
    <string name="favorite">Favorite</string>
    <string name="detailFav">Halaman Favorite</string>
    <string name="reminder">Reminder</string>
    <string name="pengingat">Pengingat</string>
    <string name="jam">Pada Jam 09.00 Pagi</string>
    <string name="alarm">Alarm</string>
</resources>