<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DetailAcivity">

    <ProgressBar
        android:id="@+id/pb_detail"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_detail"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        app:civ_border_color="#959595"
        app:civ_border_width="1dp"
        android:src="@drawable/user9"
        android:layout_marginTop="@dimen/margin5" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin5"
        android:fontFamily="casual"
        android:textStyle="bold"
        android:text="@string/miftah"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="monospace"
        android:gravity="center"
        android:lines="2"
        android:text="@string/location"
        android:textColor="@android:color/black"
        android:textSize="12sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin5"
                android:layout_marginEnd="@dimen/margin5"
                android:fontFamily="monospace"
                android:gravity="center"
                android:lines="2"
                android:text="@string/type"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

            <View
                android:id="@+id/view"
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="165dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin5"
                android:layout_marginEnd="@dimen/margin5"
                android:fontFamily="monospace"
                android:gravity="center"
                android:lines="2"
                android:text="@string/company"
                android:textColor="@android:color/black"
                android:textSize="12sp" />

        </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin5"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:tabTextColor="@android:color/white" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </LinearLayout>

</RelativeLayout>
